# ncp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: pendulum_basic.py  unicycle_basic.py
experiments/ncp_vs_mpc/: .gitignore  alpha_analysis.py
experiments/ncp_vs_mpc/slurm/: install_deps.sh  phase1_casadi_mpc.sh  phase1_closedloop.sh  phase1_mppi_mpc.sh  phase1_ncp.sh  phase2_casadi_mpc.sh  phase2_closedloop.sh  phase2_mppi_mpc.sh  phase2_ncp.sh  submit_phase1.sh  submit_phase2.sh
experiments/ncp_vs_mpc/src/: aggregate_results.py  casadi_mpc.py  config.py  (+9 more)
ncp/: __init__.py
ncp/algorithm/: __init__.py  builder.py  mppi.py  result.py  search.py
ncp/dynamics/: __init__.py  acrobot.py  ball_beam.py  bicycle.py  cartpole.py  cstr.py  duffing.py  furuta.py  lotka_volterra.py  mountain_car.py  pendubot.py  pendulum.py  quadrotor_2d.py  two_link_arm.py  unicycle.py  van_der_pol.py
ncp/envs/: __init__.py  _base.py  acrobot.py  ball_beam.py  bicycle.py  cartpole.py  cstr.py  duffing.py  furuta.py  lotka_volterra.py  mountain_car.py  pendubot.py  pendulum.py  quadrotor_2d.py  two_link_arm.py  unicycle.py  van_der_pol.py
ncp/evaluation/: __init__.py  controller.py  simulate.py
ncp/geometry/: __init__.py  grid.py  hypercubes.py  intersections.py
ncp/utils/: __init__.py  tensor_ops.py  wrapping.py
ncp/visualization/: __init__.py  phase_portrait.py  trajectory.py
notebooks/originals/: TauPendulumAlpha.ipynb  TrueUnicycleAlpha.ipynb
tests/: test_algorithm.py  test_dynamics.py  test_envs.py  test_geometry.py  test_integration.py  test_new_systems.py
(+110 files in other folders)
